<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/container_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/radiogroup_activity_main"></FrameLayout>

    <RadioGroup
        android:id="@+id/radiogroup_activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            style="@style/MainRadioGroup"
            android:drawableTop="@drawable/guide_selector_radiobutton"
            android:text="@string/guide" />

        <RadioButton
            style="@style/MainRadioGroup"
            android:drawableTop="@drawable/hot_selector_radiobutton"
            android:text="@string/hot" />

        <RadioButton
            style="@style/MainRadioGroup"
            android:drawableTop="@drawable/category_selector_radiobutton"
            android:text="@string/category" />

        <RadioButton
            style="@style/MainRadioGroup"
            android:drawableTop="@drawable/mine_selector_radiobutton"
            android:text="@string/me" />

    </RadioGroup>

</RelativeLayout>
